[package]
name = "fuso"
version = "1.0.5-beta"
edition = "2021"
build = "build.rs"
authors = ["editso <https://github.com/editso>"]
description = "An intranet penetration proxy tool"
license = "GPL-3.0"
keywords = ["proxy", "penetrate", "socks5", "async", "small", "networking"]
categories = ["proxy", "network-programming"]
repository = "https://github.com/editso/fuso"
homepage = "https://github.com/editso/fuso"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fuc"
path = "src/bin/client.rs"

[[bin]]
name = "fus"
path = "src/bin/server.rs"

[[bin]]
name = "fuso"
path = "src/bin/main.rs"

[profile.release]
lto = true
debug = false
rpath = false
incremental = false
overflow-checks = false
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[features]
default = ["fuso-config", "fuso-cli", "fuso-kcp", "fuso-rt-tokio", "fuso-manager", "fuso-socks5"]
fuso-kcp = ["kcp-rust"]
fuso-cli = ["clap"]
fuso-serde = ["serde"]
fuso-socks5 = [ "dep:fuso-socks", "dep:futures" ]
fuso-config = ["toml", "serde"]
fuso-runtime = []
fuso-rt-tokio = ["dep:tokio", "fuso-runtime"]
fuso-manager = [ "dep:axum", "fuso-rt-tokio"]


[build-dependencies]
cc = "1.0"
bindgen = "0.69.4"


[dependencies]
rc4 = "0.1.0"
env_logger = "0.11.2"
log = "0.4.16"
pin-project = "1.1.4"
parking_lot = "0.12.1"
rmp-serde = "1.3.0"
rand = "0.8.5"
tun = { version = "0.6.1", features = ["async"] }
futures = { version = "0.3.30", optional = true}
mio = { version = "0.8.11", features = ["os-poll"] }

[dependencies.kcp-rust]
optional = true
version = "*"
git = "https://github.com/editso/kcp-rust"
default-features = false

[dependencies.fuso-socks]
optional = true
path = "../fuso-socks5"

[dependencies.axum]
optional = true
version = "0.7.4"

[dependencies.toml]
optional = true
version = "0.8.10"

[dependencies.serde]
optional = true
version = "1.0.197"
features = ["derive"]


[dependencies.clap]
optional = true
version = "4.5.1"
features = ["derive"]


[dependencies.tokio]
optional = true
version = "1.36.0"
features = ["full"]

[dev-dependencies.tokio]
version = "1.36.0"
features = ["test-util", "full"]
